[package]
name = "twin-operator"
description = "Twin Operator"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
async-trait = "0.1"
base64 = "0.13.0"
chrono = "0.4"
cloudevents-sdk = "0.5"
drogue-bazaar = "0.2.0"
drogue-client = "0.11.0-alpha.1"
env_logger = "0.9"
futures = "0.3"
humantime = "2"
humantime-serde = "1"
hyper = { version = "0.14", features = ["full"] }
indexmap = "1.9"
log = "0.4"
paho-mqtt = { version = "0.11", features = ["ssl"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "stream", "native-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.8"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
url = "2"

drogue-doppelgaenger-model = { git = "https://github.com/drogue-iot/drogue-doppelgaenger", rev = "59991bd1f8c8f49725ccac49878bccccc94fc6fd" }
